--- a/index.html
+++ b/index.html
@@ -97,10 +97,9 @@
     <!-- Addition Tab Content -->
     <div id="homeTab" class="tab-content active">
         <table class="table">
-            <tr><th>To Be Added:</th></tr>
-            <tr><td>Multiple Subject Tabs</td></tr>
-            <tr><td>GWA Calculator</td></tr>
-            <tr><td>design lmao</td></tr>
+            <tr><th>My Other Projects</th></tr>
+            <tr><td><a href="https://docs.google.com/spreadsheets/d/1Ekb6OqpV2mh4k2Gc6uDu0wRp7BNCWa-2oPBz2OgnnSs/copy">BS CS Curriculum Checker</a></td></tr>
+            <tr><td><a href="https://docs.google.com/spreadsheets/d/18xwqYzMEK02Qfj5Gu6646WYbRbDd6ChPxgYoX6QxAM0/copy">BS Arki Curriculum Checker</a></td></tr>
         </table>
     </div>
     
