--- a/index.html
+++ b/index.html
@@ -91,11 +91,20 @@
     <div id="tabslist" class="tabs">
         <div class="tab active" onclick="showTab('homeTab')">Home</div>
         <div class="tab" onclick="showTab('testTab')">Test</div>
+        <div class="tab" onclick="showTab('otherTab')">Test</div>
         <button id="duplicateButton" onclick="duplicateTab()" style="border-radius: 0px;">+</button>
     </div>
     
     <!-- Addition Tab Content -->
     <div id="homeTab" class="tab-content active">
+        <table class="table">
+            <tr><th>My Other Projects</th></tr>
+            <tr><td><a href="https://docs.google.com/spreadsheets/d/1Ekb6OqpV2mh4k2Gc6uDu0wRp7BNCWa-2oPBz2OgnnSs/copy">BS CS Curriculum Checker</a></td></tr>
+            <tr><td><a href="https://docs.google.com/spreadsheets/d/18xwqYzMEK02Qfj5Gu6646WYbRbDd6ChPxgYoX6QxAM0/copy">BS Arki Curriculum Checker</a></td></tr>
+        </table>
+    </div>
+
+    <div id="otherTab" class="tab-content active">
         <table class="table">
             <tr><th>My Other Projects</th></tr>
             <tr><td><a href="https://docs.google.com/spreadsheets/d/1Ekb6OqpV2mh4k2Gc6uDu0wRp7BNCWa-2oPBz2OgnnSs/copy">BS CS Curriculum Checker</a></td></tr>
